# SDL_UI_Engine

./: Engine.hs  Event.hs  New.hs  Other.hs  README.md  Request.hs  Timer.hs  Type.hs  Widget.hs  cabal.project.local  engine.cabal  test.cabal  ui.cabal
new/: Event.hs
new/Editor/: Block.hs  Core.hs  Render.hs
new/Other/: Get.hs  Other.hs
new/Text/: From.hs  Render.hs
new/Widget/: Editor.hs  Remove.hs
src/: Block.hs  Collector.hs  Data.hs  Editor.hs  Engine.hs  Event.hs  Instruction.hs  Other.hs  Record.hs  Request.hs  Text.hs  Timer.hs  Type.hs  Underlying.hs  Widget.hs  Window.hs
src/Editor/: Block.hs  Core.hs  Cursor.hs  From.hs  Render.hs  Select.hs  Typesetting.hs
src/Other/: Error.hs  Get.hs  Other.hs  Set.hs  Text.hs  Update.hs
src/Text/: Font.hs  From.hs  Max.hs
src/Widget/: Alter.hs  Create.hs  Editor.hs  Remove.hs  Replace.hs  Resize.hs  Text.hs  Widget.hs  Window.hs
unfinished/: Editor.hs  Engine.hs  Event.hs  Other.hs  Request.hs  Text.hs  Type.hs  Widget.hs
