cabal-version:      3.0
name:               ui
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Qerfcxz
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Editor.Block
        Editor.Core
        Editor.Cursor
        Editor.From
        Editor.Render
        Editor.Typesetting
        Other.Error
        Other.Get
        Other.Other
        Other.Text
        Text.Font
        Text.From
        Text.Max
        Text.Render
        Widget.Alter
        Widget.Create
        Widget.Editor
        Widget.Remove
        Widget.Replace
        Widget.Text
        Widget.Widget
        Widget.Window
        Block
        Engine
        Event
        Request
        Timer
        Type
        Window
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        mtl ==2.3.1,
        containers ==0.7,
        unordered-containers==0.2.20,
        text ==2.1.2,
        bytestring ==0.12.2.0,
        random ==1.3.1,
        sdl2 ==2.5.5.1,
        sdl2-ttf ==2.1.3,
        sdl2-gfx==0.3.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable test
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        mtl ==2.3.1,
        containers ==0.7,
        unordered-containers==0.2.20,
        text ==2.1.2,
        bytestring ==0.12.2.0,
        random ==1.3.1,
        sdl2 ==2.5.5.1,
        sdl2-ttf ==2.1.3,
        sdl2-gfx==0.3.1.0,
        ui

    hs-source-dirs:   app
    default-language: Haskell2010
